<resources>
    <string name="app_name">BasicCourseApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="show_as_grid">Show as grid</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username_hint">Username</string>
    <string name="login_password">Password</string>
    <string name="login_title_button">Login</string>
    <string name="create_account">Create account</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="show_as_list">Show as list</string>
    <string name="title_activity_details">DetailsActivity</string>
</resources>
