<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".controller.CreateAccountActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <EditText
                android:layout_margin="@dimen/create_acc_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_acc_first_name"
                android:hint="@string/first_name"/>
            <EditText
                android:layout_margin="@dimen/create_acc_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_acc_last_name"
                android:layout_below="@+id/create_acc_first_name"
                android:hint="@string/last_name"/>
            <EditText
                android:layout_margin="@dimen/create_acc_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_acc_username"
                android:layout_below="@+id/create_acc_last_name"
                android:hint="@string/username_hint"/>
            <EditText
                android:layout_margin="@dimen/create_acc_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_acc_password"
                android:layout_below="@+id/create_acc_username"
                android:hint="@string/login_password"/>
            <Button
                android:layout_margin="@dimen/create_acc_margin"
                android:id="@+id/create_acc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/create_acc_password"
                android:text="@string/create_account"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>