<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        
        <RelativeLayout
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/login_username"
                android:hint="@string/username_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:layout_marginTop="25dp"
                android:hint="@string/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_password"
                android:inputType="textPassword"
                android:layout_below="@+id/login_username"
                />
            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_below="@+id/login_password"
                android:layout_marginTop="10dp"
                android:text="@string/login_title_button"/>

            <TextView
               android:id="@+id/create_acc_text"
                android:text="@string/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_button"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:textStyle="italic"
                android:textColor="@color/colorPrimary"/>


        </RelativeLayout>
        
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
